feat: add project ownership transfers
